--- a/html/about.html
+++ b/html/about.html
@@ -28,7 +28,7 @@
 
             <ul>
 
-                <li><a class="active" href="./home.html">home</a></li>
+                <li><a class="active" href="../index.html">home</a></li>
 
                 <li><a  href="./about.html">About</a></li>
 
