--- a/html/shop.html
+++ b/html/shop.html
@@ -30,7 +30,7 @@
 
             <ul>
 
-                <li><a class="active" href="./home.html">home</a></li>
+                <li><a class="active" href="../index.html">home</a></li>
 
                 <li><a  href="./about.html">About</a></li>
 
