--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
 
                 <li><a class="active" href="../index.html">home</a></li>
 
-                <li><a  href="./about.html">About</a></li>
+                <li><a  href="about.html">About</a></li>
 
                 <li><a  href="login.html">Login</a></li>
 
