--- a/html/contact.html
+++ b/html/contact.html
@@ -31,9 +31,9 @@
 
             <ul>
 
-                <li><a class="active" href="./home.html">home</a></li>
+                <li><a class="active" href="../index.html">home</a></li>
 
-                <li><a  href="./about.html">About</a></li>
+                <li><a  href="about.html">About</a></li>
 
                 <li><a  href="login.html">Login</a></li>
 
