--- a/html/shop.html
+++ b/html/shop.html
@@ -32,7 +32,7 @@
 
                 <li><a class="active" href="../index.html">home</a></li>
 
-                <li><a  href="./about.html">About</a></li>
+                <li><a  href="about.html">About</a></li>
 
                 <li><a  href="login.html">Login</a></li>
 
